# dawarkitty

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml
openapi/: dawarich.yaml
openapi/dawarich/client/: Cargo.toml  README.md
openapi/dawarich/client/.openapi-generator/: FILES
openapi/dawarich/client/docs/: ApiV1AreasGet200ResponseInner.md  ApiV1AreasPostRequest.md  ApiV1CountriesVisitedCitiesGet200Response.md  ApiV1CountriesVisitedCitiesGet200ResponseDataInner.md  ApiV1CountriesVisitedCitiesGet200ResponseDataInnerCitiesInner.md  ApiV1CountriesVisitedCitiesGet400Response.md  ApiV1OverlandBatchesPostRequest.md  ApiV1OverlandBatchesPostRequestGeometry.md  ApiV1OverlandBatchesPostRequestProperties.md  ApiV1OwntracksPointsPostRequest.md  ApiV1PhotosGet200ResponseInner.md  ApiV1PhotosIdThumbnailGet200Response.md  ApiV1PointsGet200ResponseInner.md  ApiV1PointsPostRequest.md  ApiV1PointsPostRequestGeometry.md  ApiV1PointsPostRequestProperties.md  ApiV1PointsTrackedMonthsGet200ResponseInner.md  ApiV1SettingsGet200Response.md  ApiV1SettingsGet200ResponseSettings.md  ApiV1SettingsPatchRequest.md  ApiV1StatsGet200Response.md  ApiV1StatsGet200ResponseYearlyStatsInner.md  ApiV1StatsGet200ResponseYearlyStatsInnerMonthlyDistanceKm.md  AreasApi.md  BatchesApi.md  CountriesApi.md  HealthApi.md  PhotosApi.md  PointsApi.md  SettingsApi.md  StatsApi.md  UsersApi.md
openapi/dawarich/client/src/apis/: areas_api.rs  batches_api.rs  configuration.rs  countries_api.rs  (+7 more)
src/: api.rs  env.rs  main.rs  metrics.rs
src/api/: dawarich.rs  tractive.rs
(+24 files in other folders)
