[package]
name = "dawarkitty"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
dawarich = { path = "./openapi/dawarich/client" }
tokio = { version = "1", features = ["full"] }
reqwest = "0.12.12"
serde_json = "1.0.137"
serde = "1.0.217"
envy = "0.4.2"
log = "0.4.25"
env_logger = "0.11.6"
