[package]
name = "dawarkitty"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
chrono = { version = "0.4.39", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.137"
serde = { version = "1.0.217", features = ["derive"] }
envy = "0.4.2"
log = "0.4.25"
env_logger = "0.11.6"
geojson = "0.24.1"
