[package]
name = "dawarkitty"
version = "0.1.2"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.137"
serde = { version = "1.0.217", features = ["derive"] }
envy = "0.4.2"
log = { version = "0.4.25", features = ["max_level_trace", "release_max_level_trace"] }
env_logger = "0.11.6"
geojson = "0.24.1"

[profile.release]
debug = true
